--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,35 +1,63 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/userConsole/userConsole",
-    "pages/storageConsole/storageConsole",
-    "pages/databaseGuide/databaseGuide",
-    "pages/addFunction/addFunction",
-    "pages/deployFunctions/deployFunctions",
-    "pages/chooseLib/chooseLib"
+    "pages/myapp/myapp"
   ],
+  "subpackages": [
+    {
+      "root": "expressQueryPackage",
+      "name": "expressQueryPackage",
+      "pages": [
+        "pages/express/express"
+      ]
+    }
+  ],
+  "preloadRule": {
+    "pages/index/index": {
+      "network": "wifi",
+      "packages": [
+        "expressQueryPackage"
+      ]
+    }
+  },
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "工具集合",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "list": [
       {
         "pagePath": "pages/index/index",
-        "text": "首页"
+        "text": "首页",
+        "iconPath": "images/emoji/emoji-27.png",
+        "selectedIconPath": "images/emoji/emoji-1.png"
       },
       {
-        "pagePath": "pages/chooseLib/chooseLib",
-        "text": "日志"
+        "pagePath": "pages/myapp/myapp",
+        "text": "我的",
+        "iconPath": "images/emoji/emoji-14.png",
+        "selectedIconPath": "images/emoji/emoji-15.png"
       }
     ]
   },
   "usingComponents": {
-    "van-row": "../../miniprogram_npm/vant-weapp/row/index",
-    "van-col": "../../miniprogram_npm/vant-weapp/col/index",
-    "van-button": "../../miniprogram_npm/vant-weapp/button/index"
+    "i-grid": "components/iview-weapp/grid/index",
+    "i-grid-item": "components/iview-weapp/grid-item/index",
+    "i-grid-icon": "components/iview-weapp/grid-icon/index",
+    "i-grid-label": "components/iview-weapp/grid-label/index",
+    "i-row": "components/iview-weapp/row/index",
+    "i-input": "components/iview-weapp/input/index",
+    "i-panel": "components/iview-weapp/panel/index",
+    "van-row": "miniprogram_npm/vant-weapp/row/index",
+    "van-col": "miniprogram_npm/vant-weapp/col/index",
+    "van-button": "miniprogram_npm/vant-weapp/button/index",
+    "van-nav-bar": "miniprogram_npm/vant-weapp/nav-bar/index",
+    "van-icon": "miniprogram_npm/vant-weapp/icon/index",
+    "van-field": "miniprogram_npm/vant-weapp/field/index",
+    "van-cell": "miniprogram_npm/vant-weapp/cell/index",
+    "van-cell-group": "miniprogram_npm/vant-weapp/cell-group/index"
   }
 }
