--- a/cloudfunctions/index/package.json
+++ b/cloudfunctions/index/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "crypto": "^1.0.1",
     "tcb-router": "^1.1.2",
     "wx-server-sdk": "latest"
   }
