--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -62,6 +62,7 @@
     "van-cell-group": "miniprogram_npm/vant-weapp/cell-group/index",
     "van-dialog": "miniprogram_npm/vant-weapp/dialog/index",
     "van-block": "components/label-block/index",
-    "van-steps": "miniprogram_npm/vant-weapp/steps/index"
+    "van-steps": "miniprogram_npm/vant-weapp/steps/index",
+    "van-toast": "miniprogram_npm/vant-weapp/toast/index"
   }
 }
