优化页面样式

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -30,6 +30,7 @@
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
+    "selectedColor": "#FFC107",
     "list": [
       {
         "pagePath": "pages/index/index",
