--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 		"newFeature": true,
 		"nodeModules": true,
 		"autoAudits": false,
-		"uglifyFileName": false
+		"uglifyFileName": true
 	},
 	"appid": "wx7a2b775495664f2c",
 	"projectname": "usersUtil",
