--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,8 @@
       "name": "expressQueryPackage",
       "pages": [
         "pages/express/express",
-        "pages/expressSelech/expressSelech"
+        "pages/expressSelech/expressSelech",
+        "pages/instructions/instructions"
       ],
       "independent": false
     }
@@ -68,6 +69,7 @@
     "van-steps": "miniprogram_npm/vant-weapp/steps/index",
     "van-toast": "miniprogram_npm/vant-weapp/toast/index",
     "van-loading": "miniprogram_npm/vant-weapp/loading/index",
-    "van-notice-bar": "miniprogram_npm/vant-weapp/notice-bar/index"
+    "van-notice-bar": "miniprogram_npm/vant-weapp/notice-bar/index",
+    "van-transition": "miniprogram_npm/vant-weapp/transition/index"
   }
 }
