--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "cloud": true,
   "pages": [
     "pages/index/index",
-    "pages/myapp/myapp"
+    "pages/myapp/myapp",
+    "pages/about/about"
   ],
   "subpackages": [
     {
