--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -26,7 +26,7 @@
   ],
   "preloadRule": {
     "pages/index/index": {
-      "network": "wifi",
+      "network": "all",
       "packages": [
         "expressQueryPackage",
         "translationPackage"
